--- a/core/resources/src/main/res/values-pl/strings.xml
+++ b/core/resources/src/main/res/values-pl/strings.xml
@@ -1069,7 +1069,7 @@
     <string name="lanczos3_jinc_sub">Wariant filtru Lanczos 3, który wykorzystuje funkcję jinc, zapewniając wysokiej jakości interpolację z minimalnymi artefaktami.</string>
     <string name="auto_crop">Automatyczne kadrowanie</string>
     <string name="triangle">Trójkąt</string>
-    <string name="custom_params_info" tools:ignore="TypographyDashes">Opcje powinny być wprowadzane zgodnie z tym wzorem: „--{nazwa_opcji} {wartość}\\</string>
+    <string name="custom_params_info" tools:ignore="TypographyDashes">Opcje powinny być wprowadzane zgodnie z tym wzorem: „--{nazwa_opcji} {wartość}\</string>
     <string name="clustered_2x2_dithering">Dithering klastrowy 2x2</string>
     <string name="links_preview_sub">Umożliwia pobieranie podglądu linków w miejscach, w których można uzyskać tekst (QRCode, OCR itp.).</string>
     <string name="tag_exposure_index">Wskaźnik ekspozycji</string>
