--- a/core/resources/src/main/res/values-zh-rTW/strings.xml
+++ b/core/resources/src/main/res/values-zh-rTW/strings.xml
@@ -1867,7 +1867,7 @@
     <string name="pulse_grid_pixelization">脉冲网格像素化</string>
     <string name="nucleus_pixelization">核像素化</string>
     <string name="radial_weave_pixelization">径向编织像素化</string>
-    <string name="cannot_open_uri">无法打开 uri \\"%s\\"</string>
+    <string name="cannot_open_uri">无法打开 uri \"%s\"</string>
     <string name="snowfall_mode">降雪模式</string>
     <string name="enabled">启用</string>
     <string name="border_frame">边框</string>
@@ -2001,4 +2001,7 @@
     <string name="type_removebg">删除背景</string>
     <string name="horizontal_border_thickness">水平边框厚度</string>
     <string name="vertical_border_thickness">垂直边框厚度</string>
+    <plurals name="color_count">
+        <item quantity="other">%s 颜色</item>
+    </plurals>
 </resources>
