--- a/core/resources/src/main/res/values-ko/strings.xml
+++ b/core/resources/src/main/res/values-ko/strings.xml
@@ -884,9 +884,9 @@
     <string name="resize_anchor">앵커 크기 조정</string>
     <string name="pixel_switch">픽셀</string>
     <string name="fluent_switch">유창한</string>
-    <string name="fluent_switch_sub">\\"Fluent\\" 디자인 시스템을 기반으로 한 스위치</string>
+    <string name="fluent_switch_sub">\"Fluent\" 디자인 시스템을 기반으로 한 스위치</string>
     <string name="cupertino_switch">쿠퍼티노</string>
-    <string name="cupertino_switch_sub">\\"Cupertino\\" 디자인 시스템을 기반으로 한 스위치</string>
+    <string name="cupertino_switch_sub">\"Cupertino\" 디자인 시스템을 기반으로 한 스위치</string>
     <string name="images_to_svg">이미지를 SVG로</string>
     <string name="images_to_svg_sub">주어진 이미지를 SVG 이미지로 추적</string>
     <string name="use_sampled_palette">샘플링된 팔레트 사용</string>
@@ -1122,7 +1122,7 @@
     <string name="save_as_qr_code_image">QR 코드 이미지로 저장</string>
     <string name="delete_template">템플릿 삭제</string>
     <string name="delete_template_warn">선택한 템플릿 필터를 삭제하려고 합니다. 이 작업은 취소할 수 없습니다.</string>
-    <string name="added_filter_template">이름이 \\"%1$s\\"(%2$d)인 필터 템플릿이 추가되었습니다.</string>
+    <string name="added_filter_template">이름이 \"%1$s\"(%2$d)인 필터 템플릿이 추가되었습니다.</string>
     <string name="filter_preview">필터 미리보기</string>
     <string name="qr_code">QR 및 바코드</string>
     <string name="qr_code_sub">QR 코드를 스캔하여 내용을 가져오거나 문자열을 붙여넣어 새 내용을 생성하세요.</string>
@@ -1417,7 +1417,7 @@
     <string name="tesseract_options">테서랙트 옵션</string>
     <string name="tesseract_options_sub">Tesseract 엔진에 일부 입력 변수 적용</string>
     <string name="custom_options">맞춤 옵션</string>
-    <string name="custom_params_info">옵션은 다음 패턴에 따라 입력해야 합니다: \\"--{option_name} {value}\\"</string>
+    <string name="custom_params_info">옵션은 다음 패턴에 따라 입력해야 합니다: \"--{option_name} {value}\"</string>
     <string name="auto_crop">자동 자르기</string>
     <string name="free_corners">무료 코너</string>
     <string name="free_corners_sub">다각형으로 이미지 자르기, 원근감도 수정됩니다.</string>
@@ -1449,7 +1449,7 @@
     <string name="zigzag_ratio">지그재그 비율</string>
     <string name="create_shortcut">바로가기 만들기</string>
     <string name="create_shortcut_title">고정할 도구 선택</string>
-    <string name="create_shortcut_subtitle">도구는 실행기의 홈 화면에 바로가기로 추가됩니다. 필요한 동작을 달성하려면 \\"파일 선택 건너뛰기\\" 설정과 결합하여 사용하세요.</string>
+    <string name="create_shortcut_subtitle">도구는 실행기의 홈 화면에 바로가기로 추가됩니다. 필요한 동작을 달성하려면 \"파일 선택 건너뛰기\" 설정과 결합하여 사용하세요.</string>
     <string name="dont_stack_frames">프레임을 쌓지 마세요</string>
     <string name="dont_stack_frames_sub">이전 프레임을 폐기하여 서로 쌓이지 않도록 합니다.</string>
     <string name="crossfade">크로스페이드</string>
@@ -1493,7 +1493,7 @@
     <string name="open_source_licenses">오픈 소스 라이선스</string>
     <string name="open_source_licenses_sub">이 앱에 사용된 오픈 소스 라이브러리의 라이선스 보기</string>
     <string name="area">영역</string>
-    <string name="area_sub">픽셀 영역 관계를 사용한 리샘플링. 모아레 없는 결과를 제공하므로 이미지 데시메이션에 선호되는 방법일 수 있습니다. 하지만 이미지를 확대하면 \\"Nearest\\" 방법과 유사합니다.</string>
+    <string name="area_sub">픽셀 영역 관계를 사용한 리샘플링. 모아레 없는 결과를 제공하므로 이미지 데시메이션에 선호되는 방법일 수 있습니다. 하지만 이미지를 확대하면 \"Nearest\" 방법과 유사합니다.</string>
     <string name="enable_tonemapping">톤 매핑 활성화</string>
     <string name="enter_percent">입력하다 %</string>
     <string name="unknown_host">사이트에 액세스할 수 없습니다. VPN을 사용해 보거나 URL이 올바른지 확인하세요.</string>
@@ -1508,8 +1508,8 @@
     <string name="fast_settings_side">빠른 설정 측면</string>
     <string name="fast_settings_side_sub">이미지를 편집하는 동안 선택한 면에 플로팅 스트립을 추가하면 클릭 시 빠른 설정이 열립니다.</string>
     <string name="clear_selection">선택 취소</string>
-    <string name="settings_group_visibility_hidden">\\"%s\\" 설정 그룹은 기본적으로 축소됩니다.</string>
-    <string name="settings_group_visibility_visible">기본적으로 \\"%s\\" 설정 그룹이 확장됩니다.</string>
+    <string name="settings_group_visibility_hidden">\"%s\" 설정 그룹은 기본적으로 축소됩니다.</string>
+    <string name="settings_group_visibility_visible">기본적으로 \"%s\" 설정 그룹이 확장됩니다.</string>
     <string name="base_64_tools">Base64 도구</string>
     <string name="base_64_tools_sub">Base64 문자열을 이미지로 디코딩하거나 이미지를 Base64 형식으로 인코딩합니다.</string>
     <string name="base_64">Base64</string>
@@ -1738,7 +1738,7 @@
     <string name="refresh">새로 고치다</string>
     <string name="wallpapers_export_sub">현재 홈, 자물쇠 및 내장 배경화면을 받으세요.</string>
     <string name="allow_access_to_all_files_for_wp">모든 파일에 대한 액세스를 허용합니다. 배경화면을 검색하는 데 필요합니다.</string>
-    <string name="allow_read_media_images_for_wp">외부 저장소 권한 관리만으로는 충분하지 않습니다. 이미지에 대한 액세스를 허용해야 합니다. \\"모두 허용\\"을 선택하세요.</string>
+    <string name="allow_read_media_images_for_wp">외부 저장소 권한 관리만으로는 충분하지 않습니다. 이미지에 대한 액세스를 허용해야 합니다. \"모두 허용\"을 선택하세요.</string>
     <string name="add_preset_to_filename">파일 이름에 사전 설정 추가</string>
     <string name="add_preset_to_filename_sub">이미지 파일 이름에 선택한 사전 설정이 포함된 접미사를 추가합니다.</string>
     <string name="add_image_scale_mode_to_filename">파일 이름에 이미지 크기 모드 추가</string>
@@ -1867,7 +1867,7 @@
     <string name="pulse_grid_pixelization">펄스 그리드 픽셀화</string>
     <string name="nucleus_pixelization">핵 픽셀화</string>
     <string name="radial_weave_pixelization">방사형 직조 픽셀화</string>
-    <string name="cannot_open_uri">URI \\"%s\\"을(를) 열 수 없습니다.</string>
+    <string name="cannot_open_uri">URI \"%s\"을(를) 열 수 없습니다.</string>
     <string name="snowfall_mode">강설 모드</string>
     <string name="enabled">활성화됨</string>
     <string name="border_frame">테두리 프레임</string>
@@ -2001,4 +2001,7 @@
     <string name="type_removebg">BG 제거</string>
     <string name="horizontal_border_thickness">가로 테두리 두께</string>
     <string name="vertical_border_thickness">세로 테두리 두께</string>
+    <plurals name="color_count">
+        <item quantity="other">%s 색상</item>
+    </plurals>
 </resources>
