--- a/core/resources/src/main/res/values-sr/strings.xml
+++ b/core/resources/src/main/res/values-sr/strings.xml
@@ -855,7 +855,7 @@
     <string name="lossy_compression">Компресија са губитком</string>
     <string name="lossy_compression_sub">Користи компресију са губицима да смањи величину датотеке уместо без губитака</string>
     <string name="compression_type">Тип компресије</string>
-    <string name="speed_sub">Контролише брзину декодирања резултујуће слике, ово би требало да помогне да се добијена слика брже отвори, вредност __ПХ_0__ значи најспорије декодирање, док __ПХ_1__ - најбрже, ово подешавање може повећати величину излазне слике</string>
+    <string name="speed_sub">Контролише брзину декодирања резултујуће слике, ово би требало да помогне да се добијена слика брже отвори, вредност %s значи најспорије декодирање, док __ПХ_1__ - најбрже, ово подешавање може повећати величину излазне слике</string>
     <string name="sorting">Сортирање</string>
     <string name="sort_by_date">Датум</string>
     <string name="sort_by_date_reversed">Датум (обрнуто)</string>
@@ -884,9 +884,9 @@
     <string name="resize_anchor">Промени величину сидра</string>
     <string name="pixel_switch">Пикел</string>
     <string name="fluent_switch">Течно</string>
-    <string name="fluent_switch_sub">Прекидач заснован на систему дизајна \\"Флуент\\".</string>
+    <string name="fluent_switch_sub">Прекидач заснован на систему дизајна \"Флуент\".</string>
     <string name="cupertino_switch">Цупертино</string>
-    <string name="cupertino_switch_sub">Прекидач заснован на систему дизајна \\"Цупертино\\".</string>
+    <string name="cupertino_switch_sub">Прекидач заснован на систему дизајна \"Цупертино\".</string>
     <string name="images_to_svg">Слике у СВГ</string>
     <string name="images_to_svg_sub">Пратите дате слике у СВГ слике</string>
     <string name="use_sampled_palette">Користите узорковану палету</string>
@@ -1122,7 +1122,7 @@
     <string name="save_as_qr_code_image">Сачувај као слику КР кода</string>
     <string name="delete_template">Избриши шаблон</string>
     <string name="delete_template_warn">Спремате се да избришете изабрани филтер шаблона. Ова операција се не може опозвати</string>
-    <string name="added_filter_template">Додан шаблон филтера са именом \\"__ПХ_0__\\" (__ПХ_1__)</string>
+    <string name="added_filter_template">Додан шаблон филтера са именом \"%s\" (__ПХ_1__)</string>
     <string name="filter_preview">Преглед филтера</string>
     <string name="qr_code">КР и бар код</string>
     <string name="qr_code_sub">Скенирајте КР код и преузмите његов садржај или налепите стринг да бисте генерисали нови</string>
@@ -1417,7 +1417,7 @@
     <string name="tesseract_options">Тессерацт Оптионс</string>
     <string name="tesseract_options_sub">Примените неке улазне варијабле за тесеракт мотор</string>
     <string name="custom_options">Прилагођене опције</string>
-    <string name="custom_params_info">Опције треба унети према овом шаблону: \\"--{оптион_наме} {валуе}\\"</string>
+    <string name="custom_params_info">Опције треба унети према овом шаблону: \"--{оптион_наме} {валуе}\"</string>
     <string name="auto_crop">Ауто Цроп</string>
     <string name="free_corners">Фрее Цорнерс</string>
     <string name="free_corners_sub">Изрежите слику по полигон, ово такође исправља перспективу</string>
@@ -1473,7 +1473,7 @@
     <string name="layout">Лаиоут</string>
     <string name="main_screen_title">Наслов главног екрана</string>
     <string name="constant_rate_factor">Фактор константне стопе (ЦРФ)</string>
-    <string name="crf_sub">Вредност __ПХ_0__ значи спору компресију, што резултира релативно малом величином датотеке. __ПХ_1__ значи бржу компресију, што резултира великом датотеком.</string>
+    <string name="crf_sub">Вредност %s значи спору компресију, што резултира релативно малом величином датотеке. __ПХ_1__ значи бржу компресију, што резултира великом датотеком.</string>
     <string name="lut_library">Лут Либрари</string>
     <string name="lut_library_sub">Преузмите колекцију ЛУТ-ова, коју можете применити након преузимања</string>
     <string name="lut_library_update_sub">Ажурирајте колекцију ЛУТ-ова (само нови ће бити стављени у ред чекања), коју можете применити након преузимања</string>
@@ -1508,8 +1508,8 @@
     <string name="fast_settings_side">Фаст Сеттингс Сиде</string>
     <string name="fast_settings_side_sub">Додајте плутајућу траку на изабрану страну док уређујете слике, која ће отворити брза подешавања када се кликне</string>
     <string name="clear_selection">Обриши избор</string>
-    <string name="settings_group_visibility_hidden">Група подешавања \\"__ПХ_0__\\" ће подразумевано бити скупљена</string>
-    <string name="settings_group_visibility_visible">Група подешавања \\"__ПХ_0__\\" ће подразумевано бити проширена</string>
+    <string name="settings_group_visibility_hidden">Група подешавања \"%s\" ће подразумевано бити скупљена</string>
+    <string name="settings_group_visibility_visible">Група подешавања \"%s\" ће подразумевано бити проширена</string>
     <string name="base_64_tools">Басе64 Тоолс</string>
     <string name="base_64_tools_sub">Декодирајте Басе64 стринг у слику или кодирајте слику у Басе64 формат</string>
     <string name="base_64">Басе64</string>
@@ -1750,7 +1750,7 @@
     <string name="processing_screenshot">Обрада снимка екрана</string>
     <string name="screenshot_not_captured_try_again">Снимак екрана није снимљен, покушајте поново</string>
     <string name="skipped_saving">Чување је прескочено</string>
-    <string name="skipped_saving_multiple">__ПХ_0__ датотека је прескочено</string>
+    <string name="skipped_saving_multiple">%s датотека је прескочено</string>
     <string name="allow_skip_if_larger">Дозволи прескакање ако је веће</string>
     <string name="allow_skip_if_larger_sub">Неким алатима ће бити дозвољено да прескоче чување слика ако би резултујућа величина датотеке била већа од оригиналне</string>
     <string name="qr_type_calendar_event">Календарски догађај</string>
@@ -1840,7 +1840,7 @@
     <string name="palette_format">Палетте Формат</string>
     <string name="export_palette_sub">Извезите генерисану палету у различите формате</string>
     <string name="add_color_palette_sub">Додаје нову боју тренутној палети</string>
-    <string name="palette_name_not_supported">__ПХ_0__ формат не подржава давање назива палете</string>
+    <string name="palette_name_not_supported">%s формат не подржава давање назива палете</string>
     <string name="wallpapers_export_not_avaialbe">Због смерница Плаи продавнице, ова функција не може бити укључена у актуелну верзију. Да бисте приступили овој функцији, преузмите ИмагеТоолбок са алтернативног извора. Доступне верзије на ГитХуб-у можете пронаћи испод.</string>
     <string name="open_github_page">Отворите Гитхуб страницу</string>
     <string name="overwrite_files_sub_short">Оригинална датотека ће бити замењена новом уместо чувања у изабраном фолдеру</string>
@@ -1867,7 +1867,7 @@
     <string name="pulse_grid_pixelization">Пикселизација пулсне мреже</string>
     <string name="nucleus_pixelization">Нуцлеус Пикелизатион</string>
     <string name="radial_weave_pixelization">Пикселизација радијалног ткања</string>
-    <string name="cannot_open_uri">Није могуће отворити ури \\"__ПХ_0__\\"</string>
+    <string name="cannot_open_uri">Није могуће отворити ури \"%s\"</string>
     <string name="snowfall_mode">Снежни режим</string>
     <string name="enabled">Омогућено</string>
     <string name="border_frame">Бордер Фраме</string>
@@ -1929,10 +1929,10 @@
     <string name="merging">Спајање</string>
     <string name="chunk_size">Величина комада</string>
     <string name="overlap_size">Величина преклапања</string>
-    <string name="note_chunk_info">Слике веће од __ПХ_0__ пк ће бити исечене и обрађене у деловима, преклапање их спаја да би се спречиле видљиве шавове.</string>
+    <string name="note_chunk_info">Слике веће од %s пк ће бити исечене и обрађене у деловима, преклапање их спаја да би се спречиле видљиве шавове.</string>
     <string name="large_chunk_warning">Велике величине могу узроковати нестабилност код уређаја ниске класе</string>
     <string name="select_one_to_start">Изаберите једну за почетак</string>
-    <string name="delete_model_sub">Да ли желите да избришете __ПХ_0__ модел? Мораћете поново да га преузмете</string>
+    <string name="delete_model_sub">Да ли желите да избришете %s модел? Мораћете поново да га преузмете</string>
     <string name="confirm">Потврди</string>
     <string name="models">Модели</string>
     <string name="downloaded_models">Преузети модели</string>
@@ -2001,4 +2001,9 @@
     <string name="type_removebg">Уклони БГ</string>
     <string name="horizontal_border_thickness">Хоризонтална дебљина ивице</string>
     <string name="vertical_border_thickness">Вертикална дебљина ивице</string>
+    <plurals name="color_count">
+        <item quantity="one">%s боја</item>
+        <item quantity="few">%s боја</item>
+        <item quantity="other">%s боја</item>
+    </plurals>
 </resources>
